Build in parameters. Some adjustments in parameters creation.

--- a/Build_IT_Web/ClientApp/app/components/home/home.component.html
+++ b/Build_IT_Web/ClientApp/app/components/home/home.component.html
@@ -9,7 +9,9 @@
                     {{script.description}}
                 </div>
                 <div class="col-md-4 card-img">
-                    <img class="img-fluid" title="placeHolder" src="../../../assets/images/icon_placeholder.png" />
+                    <img class="img-fluid" 
+                         title="{{script.name}}" 
+                         src="https://lorempixel.com/150/150/?random={{script.id}}" />
                 </div>
             </div>
         </div>
