--- a/Build_IT_Web/ClientApp/app/components/parameters-form/parameters-form.component.html
+++ b/Build_IT_Web/ClientApp/app/components/parameters-form/parameters-form.component.html
@@ -1,340 +1,34 @@
 ﻿<h2>Parameters</h2>
-<div *ngIf="parametersToShow == 'dataParameters'">
-    <div class="border-dark" *ngFor="let parameter of dataParameters">
-        <p class="list-group-item">
-            <span [innerHTML]="parameter.name | html"></span> - {{parameter.description}}
-            <button (click)="remove(parameter.id)"
-                    type="button"
-                    class="btn btn-danger float-right">
-                Remove
-            </button>
-            <button (click)="editDataParameter(parameter)"
-                    type="button"
-                    class="btn btn-info float-right mr-2">
-                Edit
-            </button>
-        </p>
-    </div>
-</div>
-<div *ngIf="parametersToShow == 'staticParameters'">
-    <div class="border-dark" *ngFor="let parameter of staticParameters">
-        <p class="list-group-item">
-            <span [innerHTML]="parameter.name | html"></span> - {{parameter.description}}
-            <button (click)="remove(parameter.id)"
-                    type="button"
-                    class="btn btn-danger float-right">
-                Remove
-            </button>
-            <button (click)="editStaticParameter(parameter)"
-                    type="button"
-                    class="btn btn-info float-right mr-2">
-                Edit
-            </button>
-        </p>
 
-    </div>
-</div>
-<div *ngIf="parametersToShow == 'calculationParameters'">
-    <div class="border-dark" *ngFor="let parameter of calculationParameters">
-        <p class="list-group-item">
-            <span [innerHTML]="parameter.name | html"></span> - {{parameter.description}}
-            <button (click)="remove(parameter.id)"
-                    type="button"
-                    class="btn btn-danger float-right">
-                Remove
-            </button>
-            <button (click)="editCalculationParameter(parameter)"
-                    type="button"
-                    class="btn btn-info float-right mr-2">
-                Edit
-            </button>
-        </p>
-    </div>
+<div class="m-4">
+    <select [(ngModel)]="parametersToShow"
+            (change)="onParametersToShowChange()">
+        <option value="all">All parameters</option>
+        <option value="data">Data parameters</option>
+        <option value="static">Static parameters</option>
+        <option value="calculation">Calculation parameters</option>
+    </select>
 </div>
 
-
-<label for="dataParameters" class="radio-inline ml-3">
-    <input type="radio"
-           name="parametersType"
-           id="dataParameters"
-           value="dataParameters"
-           [(ngModel)]="parametersToShow" /> Data Parameters
-</label>
-<label for="staticParameters" class="radio-inline ml-3">
-    <input type="radio"
-           name="parametersType"
-           id="staticParameters"
-           value="staticParameters"
-           [(ngModel)]="parametersToShow" /> Static Parameters
-</label>
-<label for="calculationParameters" class="radio-inline ml-3">
-    <input type="radio"
-           name="parametersType"
-           id="calculationParameters"
-           value="calculationParameters"
-           [(ngModel)]="parametersToShow" /> Calculation Parameters
-</label>
-
-<div class="data-parameter" *ngIf="parametersToShow == 'dataParameters'">
-
-    <form (ngSubmit)="onSubmitDataParameter()">
-        <div class="row">
-            <div class="form-group col-md-7 col-lg-3">
-                <label for="parameterName">Name</label>
-                <input type="text"
-                       class="form-control"
-                       id="parameterName"
-                       placeholder="Name"
-                       [(ngModel)]="dataParameter.name"
-                       name="name"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-5 col-lg-3">
-                <label for="parameterUnit">Unit</label>
-                <input type="text"
-                       class="form-control"
-                       id="parameterUnit"
-                       placeholder="Unit"
-                       [(ngModel)]="dataParameter.unit"
-                       name="unit"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-7 col-lg-3">
-                <label for="parameterDocument">Document</label>
-                <input type="text"
-                       class="form-control"
-                       id="parameterDocument"
-                       placeholder="Document"
-                       [(ngModel)]="dataParameter.accordingTo"
-                       name="document"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-5 col-lg-3">
-                <label for="parameterValueType">Value Type</label>
-                <select class="form-control"
-                        id="parameterValueType"
-                        placeholder="Number"
-                        [(ngModel)]="dataParameter.valueType"
-                        name="valueType">
-                    <option value="0">Number</option>
-                    <option value="1">Text</option>
-                </select>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-12">
-                <label for="parameterDescription">Description</label>
-                <textarea class="form-control"
-                          id="parameterDescription"
-                          rows="2"
-                          placeholder="Description"
-                          [(ngModel)]="dataParameter.description"
-                          name="description"></textarea>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-8">
-                <label for="parameterDataValidator">Data Validator</label>
-                <textarea class="form-control"
-                          id="parameterDataValidator"
-                          rows="2"
-                          [(ngModel)]="dataParameter.dataValidator"
-                          name="dataValidator"
-                          placeholder="Data validator"></textarea>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-4">
-                <label>Value Options</label>
-                <button class="btn btn-primary"
-                        (click)="addValueOption()">Add</button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-sm-6 col-md-5 col-lg-3"
-                 *ngFor="let valueOption of dataParameter.valueOptions">
-                <input type="text"
-                       class="form-control"
-                       id="parameterValueOption"
-                       placeholder="Value option"
-                       [(ngModel)]="valueOption.value"
-                       name="valueOption{{valueOption.value}}"
-                       autocomplete="off">
-                <button class="btn btn-danger"
-                        (click)="removeValueOption(valueOption)"><span class="fa fa-remove"></span></button>
-            </div>
-        </div>
-        <button type="submit"
-                class="btn btn-primary mt-3">
-            Add
-        </button>
-    </form>
-</div>
-
-<div class="data-parameter" *ngIf="parametersToShow == 'staticParameters'">
-    <form (ngSubmit)="onSubmitStaticDataParameter()">
-        <div class="row">
-            <div class="form-group col-md-7 col-lg-3">
-                <label for="staticParameterName">Name</label>
-                <input type="text"
-                       class="form-control"
-                       id="staticParameterName"
-                       [(ngModel)]="staticParameter.name"
-                       name="name"
-                       placeholder="Name"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-5 col-lg-3">
-                <label for="staticParameterUnit">Unit</label>
-                <input type="text"
-                       class="form-control"
-                       id="staticParameterUnit"
-                       [(ngModel)]="staticParameter.unit"
-                       name="unit"
-                       placeholder="Unit"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-7 col-lg-3">
-                <label for="staticParameterDocument">Document</label>
-                <input type="text"
-                       class="form-control"
-                       id="staticParameterDocument"
-                       [(ngModel)]="staticParameter.accordingTo"
-                       name="document"
-                       placeholder="Document"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-5 col-lg-3">
-                <label for="staticParameterValueType">Value Type</label>
-                <select class="form-control"
-                        id="staticParameterValueType"
-                        [(ngModel)]="staticParameter.valueType"
-                        name="valueType"
-                        placeholder="Number">
-                    <option value="0">Number</option>
-                    <option value="1">Text</option>
-                </select>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-4 col-lg-3">
-                <label for="staticParameterName">Value</label>
-                <input type="text"
-                       class="form-control"
-                       id="staticParameterValue"
-                       [(ngModel)]="staticParameter.value"
-                       name="value"
-                       placeholder="Value"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-md-8 col-lg-9">
-                <label for="staticParameterDescription">Description</label>
-                <textarea class="form-control"
-                          id="staticParameterDescription"
-                          rows="2"
-                          placeholder="Description"
-                          [(ngModel)]="staticParameter.description"
-                          name="description"
-                          autocomplete="off"></textarea>
-            </div>
-        </div>
-        <button type="submit"
-                class="btn btn-primary">
-            Add
-        </button>
-    </form>
-</div>
-
-<div class="data-parameter" *ngIf="parametersToShow == 'calculationParameters'">
-    <form (ngSubmit)="onSubmitCalculationParameter()">
-        <div class="row">
-            <div class="form-group col-md-7 col-lg-3">
-                <label for="calculationParameterName">Name</label>
-                <input type="text"
-                       class="form-control"
-                       id="calculationParameterName"
-                       placeholder="Name"
-                       [(ngModel)]="calculationParameter.name"
-                       name="name"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-5 col-lg-3">
-                <label for="calculationParameterUnit">Unit</label>
-                <input type="text"
-                       class="form-control"
-                       id="calculationParameterUnit"
-                       placeholder="Unit"
-                       [(ngModel)]="calculationParameter.unit"
-                       name="unit"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-7 col-lg-3">
-                <label for="calculationParameterDocument">Document</label>
-                <input type="text"
-                       class="form-control"
-                       id="calculationParameterDocument"
-                       placeholder="Document"
-                       [(ngModel)]="calculationParameter.accordingTo"
-                       name="document"
-                       autocomplete="off">
-            </div>
-            <div class="form-group col-sm-6 col-md-5 col-lg-3">
-                <label for="calculationParameterValueType">Value Type</label>
-                <select class="form-control"
-                        id="calculationParameterValueType"
-                        [(ngModel)]="calculationParameter.valueType"
-                        name="valueType"
-                        placeholder="Number">
-                    <option value="0">Number</option>
-                    <option value="1">Text</option>
-                </select>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-8">
-                <label for="calculationParameterName">Value</label>
-                <textarea class="form-control"
-                          id="calculationParameterDescription"
-                          rows="2"
-                          [(ngModel)]="calculationParameter.value"
-                          name="value"
-                          placeholder="Value"></textarea>
-            </div>
-            <div class="form-group col-md-4">
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-8">
-                <label for="calculationParameterDescription">Description</label>
-                <textarea class="form-control"
-                          id="calculationParameterDescription"
-                          rows="2"
-                          [(ngModel)]="calculationParameter.description"
-                          name="description"
-                          placeholder="Description"></textarea>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-8">
-                <label for="calculationParameterDataValidator">Data Validator</label>
-                <textarea class="form-control"
-                          id="calculationParameterDataValidator"
-                          rows="2"
-                          [(ngModel)]="calculationParameter.dataValidator"
-                          name="dataValidator"
-                          placeholder="Data validator"></textarea>
-            </div>
-        </div>
-        <button type="submit"
-                class="btn btn-primary">
-            Add
-        </button>
-        <button *ngIf="editMode"
+<div class="border-dark" *ngFor="let parameter of filteredParameters">
+    <p class="list-group-item">
+        <span [innerHTML]="parameter.name | html"></span> - {{parameter.description}}
+        <button (click)="remove(parameter.id)"
                 type="button"
-                (click)="edit(calculationParameter)"
-                class="btn btn-primary">
-            Update
+                class="btn btn-danger float-right">
+            Remove
         </button>
-    </form>
+        <button (click)="editParameter(parameter)"
+                type="button"
+                class="btn btn-info float-right mr-2">
+            Edit
+        </button>
+    </p>
+</div>
+
+
+<div class="container">
+    <app-data-parameters-form [editMode]="editMode"
+                              [scriptId]="scriptId"
+                              [newParameter]="newParameter"></app-data-parameters-form>
 </div>
